src/test/ui/imports/import-loop-2.stderr
error[E0432]: unresolved import `a::x`
  --> $DIR/import-loop-2.rs:8:13
   |
LL |     pub use a::x;
   |             ^^^^ no `x` in `a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
